fix lobby button being cut off at the bottom of iphone screen

--- a/rushmore/app/resources/css/marketing.css
+++ b/rushmore/app/resources/css/marketing.css
@@ -485,9 +485,9 @@ h1, h2, h3, h4, h5, h6, label {
 
 #lobby-footer {
     width: 100%;
-    height: 20vh;
+    height: 20%;
     position: fixed;
-    top: 80vh;
+    top: 80%;
     left: 0;
     /*background-color: red;*/
     color: white;
@@ -522,13 +522,13 @@ h1, h2, h3, h4, h5, h6, label {
 #blue-team-lobby-header{
     background: #446CB3;
     padding: 10px;
-    min-height: 40vh;
+    min-height: 40%;
 }
 
 #red-team-lobby-header{
     background: #D91E18;
     padding: 10px;
-    min-height: 40vh;
+    min-height: 40%;
 }
 
 #game-container {
